--- a/reusability/css/reusability.css
+++ b/reusability/css/reusability.css
@@ -12,7 +12,7 @@ body {
     width: 100%;
 }
 
-.modal-content {
+.menu-content {
     background: #f5f5f5;
 }
 
@@ -21,12 +21,12 @@ body {
     background: #0f0f0f;
 }
 
-.modal-content h2,
-.modal-content a {
+.menu-content h2,
+.menu-content a {
     color: #0f0f0f;
 }
 
-.modal-content a:hover {
+.menu-content a:hover {
     color: #00b688;
 }
 
